# Master-s-Project

##File- First two phase with simple model/simple-project   (on work)/: CMakeLists.txt
##File- First two phase with simple model/simple-project   (on work)/include/: Model2.h  rtwtypes.h
##File- First two phase with simple model/simple-project   (on work)/src/: CMakeLists.txt  adapter_generator.cpp  main.cpp
##simple_tcp_project/: CMakeLists.txt
##simple_tcp_project/client/: CMakeLists.txt  client.cpp
##simple_tcp_project/server/: CMakeLists.txt  server.cpp
File - Data transfer via writing by hand/Project Intermediate/: CMakeLists.txt
File - Data transfer via writing by hand/Project Intermediate/ClangTool/: CMakeLists.txt  main.cpp
File - Data transfer via writing by hand/Project Intermediate/Client/: CMakeLists.txt  client.c  main.cpp
File - Data transfer via writing by hand/Project Intermediate/Server/: CMakeLists.txt  server.c
File- 2 phase with model with static value/simple-project _new Model2.h/: CMakeLists.txt
File- 2 phase with model with static value/simple-project _new Model2.h/include/: Model2.h
File- 2 phase with model with static value/simple-project _new Model2.h/src/: CMakeLists.txt  adapter_generator.cpp
Full simple model project setup _not working/simple-project new full/: CMakeLists.txt
Full simple model project setup _not working/simple-project new full/src/: CMakeLists.txt  main.cpp
Model2.f file and main.cpp file provided by prof/: Model2.h
(+6 files in other folders)
